--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build",
+    "build": "rm -rf dist && parcel build",
+    "build-production": "rm -rf dist && parcel build --no-source-maps",
     "build-container": "docker build ."
   },
   "devDependencies": {
@@ -14,6 +15,6 @@
   },
   "dependencies": {
     "@shoelace-style/shoelace": "^2.12.0",
-    "htmx.org": "^1.9.10"
+    "petite-vue": "^0.4.1"
   }
 }
